2006-05-06	Benedikt Meurer <benny@xfce.org>

	* exo-desktop-item-edit/, configure.in.in, Makefile.am: Import the
	  exo-desktop-item-edit utility, used to create/edit .desktop links
	  and launchers. Bug #1724.
	* icons/48x48/: Import fallback icons for the exo-desktop-item-edit
	  utility, required for older icon themes that weren't updated to
	  the icon naming spec yet.
	* po/POTFILES.in: Add new files here.
	* po/libexo-0.3.pot, po/*.po: Updated.
	* po/de.po: Update german translations.
	* NEWS, THANKS: Update NEWS and THANKS.

2006-05-06	Benedikt Meurer <benny@xfce.org>

	* Makefile.am: Add --enable-xml2po to DISTCHECK_CONFIGURE_FLAGS.
	* exo-helper/exo-helper-launcher-dialog.c: Drop the "Help" button from
	  the launcher dialog.
	* Makefile.am, configure.in.in, exo-support/: Import XfceHeading and
	  XfceTitledDialog from libxfcegui4 to use by the tools in this package
	  without readding the dependency on libxfcegui4.
	* exo-helper/Makefile.am, exo-helper/exo-helper-chooser-dialog.c,
	  exo-helper/exo-helper-utils.{c,h}: Use XfceTitledDialog as superclass
	  for ExoHelperChooserDialog.
	* po/libexo-0.3.pot, po/*.po: Updated.
	* po/de.po: Update the german translations.

2006-05-05	Benedikt Meurer <benny@xfce.org>

	* configure.in.in: Update PACKAGE_BUGREPORT.
	* exo-source/main.c(print_version): Update copyright.
	* exo-source/main.c: Print version and usage in local encoding.
	* exo-helper/exo-preferred-applications-settings.c: Use absolute path
	  to spawn exo-preferred-applications to make sure we always launch
	  the script installed with this version of the package. Add icon name
	  to the plugin icon object to support the new mcs manager.

2006-05-04	Daichi Kawahata <daichi@xfce.org>

	* Makefile.am, configure.in.in, docs/manual/Makefile.am,
	  docs/manual/ja/Makefile.am,
	  docs/manual/ja/exo-preferred-applications.xml.in,
	  docs/manual/ja/images/Makefile.am,
	  docs/manual/ja/images/exo-preferred-applications-internet.png,