@@ -1,3 +1,8 @@
+2006-05-07	Benedikt Meurer <benny@xfce.org>
+
+	* exo-desktop-item-edit/exo-die-editor.c(exo_die_editor_icon_clicked):
+	  Use gtk_file_filter_add_pixbuf_formats().
+
 2006-05-06	Benedikt Meurer <benny@xfce.org>
 
 	* exo-desktop-item-edit/, configure.in.in, Makefile.am: Import the
